# termiflow

./: .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  DEMO.ts  LICENSE  MEMORY.md  PROJECT_STATUS.md  README.md  SECURITY.md  deny.toml  maestro.toml  test_lr_branch.md  test_lr_simple.md
.claude/: context.yml
.claude/commands/: a11y-audit.md  analyze.md  audit.md  benchmark.md  carryover.md  check.md  cognitive-audit.md  commit.md  debug.md  feature.md  fixture.md  frameio-analyze.md  implement.md  issue.md  learn.md  log.md  maestro:commit.md  maestro:decide.md  maestro:doctor.md  maestro:health.md  maestro:help.md  maestro:ingest.md  maestro:learn.md  maestro:plan.md  maestro:publish.md  maestro:pulse.md  maestro:push.md  maestro:research.md  maestro:review.md  (+18 more)
.helix/: languages.toml
analysis/: 2026-04-01-open-source-strategy.md  2026-04-01-pre-oss-coordination.md  2026-04-08-nested-subgraph-containment.md  README.md
benches/: rendering.rs
context/: README.md  blockers.md  current-task.md  pulse-config.md  session-checkpoint.md
decisions/: DEC-001-clippy-allow-shape-functions.md  DEC-002-dependency-update-2026-04-01.md  DEC-003-launch-public-repo-before-crates-io.md  README.md
docs/: PHASE2_QUICK_REFERENCE.md  PHASE2_SUMMARY.md  README.md  canvas-overview.md  edge-overview.md  hackweek-reveal.md  homebrew-formula.rb  pipelines.md  reference.md  render-overview.md
examples/: cargo_metadata_to_graph.py  graph_to_mermaid.py
planning/: AUDIT-mermaid-parity.md  AUDIT-termiflow-limits.md  BT_SUBGRAPH_TITLE_POSITION.md  CELL_SCENE_GRAPH_HYBRID_ORTH_ROUTER.md  DOC_TRUTH_ALIGNMENT.md  ENGINE_REWRITE_EVALUATION.md  FUTURE_WORK.md  HORIZONTAL_DISPLAY_CONSISTENCY.md  LAYOUT_ROUTING_SPIKE.md  NESTED_SUBGRAPH_SUPPORT.md  OPEN_SOURCE_HARDENING.md  PHASE6_RENDER_FEEDBACK_ENGINE.md  PLAN.md  PRE_OSS_COORDINATION.md  README.md  RENDERING_ISSUES_AUDIT.md  RENDERING_PRECISION_PROGRAM.md  RFC-001-expanded-edge-routing.md  ROADMAP.md  ROUTING_REVIEW.md  SUBGRAPH_MIGRATION.md  SUBGRAPH_TITLE_ALIGNMENT_AND_BALANCED_PADDING.md  VISUAL_QUALITY_STEWARDSHIP.md
scripts/: demo-subgraphs.sh  regenerate_golden.sh  render_fixtures.sh  review_visual_packet.sh  visual_audit.sh
src/: canvas.rs  config.rs  crossing.rs  display_profile.rs  geom.rs  graph.rs  json_input.rs  layout.rs  layout_spike.rs  lib.rs  main.rs  measure.rs  orientation.rs  parser.rs  portals.rs  scaling.rs  spacing.rs  style.rs
tests/: cli_flags.rs  clipping_warning.rs  default_print.rs  fuzz_smoke.rs  geometry_trace.rs  golden.rs  independent_oracles.rs  json_input.rs  metamorphic_directions.rs  render_determinism.rs  render_options_api.rs  render_options_defaults.rs  visual_audit.rs  visual_audit_runner.rs
(+841 files in other folders)
