[package]
name = "termiflow"
version = "0.1.0"
edition = "2021"
description = "Interactive TUI graph explorer - jq for diagrams"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
regex = "1"
anyhow = "1.0"
dirs = "6"
toml = "0.9"
unicode-width = "0.2"
lazy_static = "1.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
