[package]
name = "termiflow"
version = "0.1.0"
edition = "2021"
description = "Terminal-native Mermaid flowchart renderer — jq for diagrams"
license = "MIT"
repository = "https://github.com/dnvt/termiflow"
homepage = "https://github.com/dnvt/termiflow"
documentation = "https://github.com/dnvt/termiflow/blob/main/docs/reference.md"
keywords = ["mermaid", "diagram", "terminal", "cli", "ascii"]
categories = ["command-line-utilities", "visualization"]
rust-version = "1.87"
default-run = "termiflow"
exclude = [
    ".claude/",
    ".maestro/",
    ".maestro-project/",
    ".helix/",
    "context/",
    "planning/",
    "analysis/",
    "inbox/",
    "decisions/",
    "artifacts/",
    "maestro.toml",
    "maestro.toml.example",
    "DEMO.ts",
    "AGENTS.md",
    "MEMORY.md",
    "tests/fixtures/",
    "tests/visual_audit.rs",
    "benches/",
    "scripts/",
    "docs/",
    "deny.toml",
]

[[bin]]
name = "termiflow"
path = "src/bin/termiflow.rs"

[[bin]]
name = "tw"
path = "src/bin/tw.rs"

[features]
golden = []

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
regex = "1"
anyhow = "1.0"
dirs = "6"
toml = "1"
unicode-width = "0.2"
lazy_static = "1.5"
unicode-segmentation = "1.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = "0.5"

[[bench]]
name = "rendering"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
